--- a/style.css
+++ b/style.css
@@ -51,8 +51,33 @@ body {
     background-color: var(--secondary-color);
     color: #fff;
     box-shadow: 3px 3px 10px #888;
+    margin: 0 auto 16px auto;
+    width: 90%;
+    font-size: 14px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.subheader img{
+.subheader p {
+    margin: 4px;
+}
+
+
+.subheader img {
     width: 40px
+}
+
+
+.grid {
+
+}
+
+.grid .item{
+
+}
+
+.grid .item .img {
+    width: 30px;
 }
