--- a/style.css
+++ b/style.css
@@ -11,9 +11,17 @@
 
 html, 
 body {
-    font-family: 'Roboto', sans-serif;
+    height: 100%;
 }
 
+.body {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+.content{
+    flex: 1 0 auto;
+}
 .container {
     width: 90%;
     margin: 0 auto;
@@ -64,20 +72,98 @@ body {
     margin: 4px;
 }
 
-
 .subheader img {
     width: 40px
 }
 
-
 .grid {
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
 }
 
 .grid .item{
-
+    display: flex;
+    flex-direction: column;
+    border: 1px #ccc solid;
+    padding: 10px;
+    box-shadow: 1px 1px 2px #ccc;
 }
 
-.grid .item .img {
+.grid .item h4 {
+    margin-bottom: 5px;
+}
+
+.grid .item p {
+    font-size: 14px;
+    color: var(--secondary-color);
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.grid .item img {
     width: 30px;
+    align-self: flex-end;
+}
+
+.app-footer{
+    background: #f4f4f4;
+    color: #444;
+    padding: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.app-footer ul{
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.app-footer ul li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.app-footer ul li i{
+    font-size: 22px;
+}
+
+/* splash*/
+
+#splash {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--primary-color);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 1s;
+}
+
+#splash img {
+    width: 300px;
+}
+
+#splash.fade {
+    opacity: 0;
+    display: none;
+}
+
+@media(min-width: 768px) {
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .grid .item img {
+        width:60px;
+    }
 }
