--- a/style.css
+++ b/style.css
@@ -1,169 +1,175 @@
 :root {
-    --primary-color: #cc0000;
-    --secondary-color: #7c0000;
+	--primary-color: #cc0000;
+	--secondary-color: #7c0000;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html, 
+html,
 body {
-    height: 100%;
+	/* https://css-tricks.com/couple-takes-sticky-footer/ */
+	height: 100%;
 }
 
-.body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-.content{
-    flex: 1 0 auto;
+
+body {
+	font-family: 'Roboto', sans-serif;
+	display: flex;
+	flex-direction: column;
 }
+
+/* For sticky footer - grow to fill the space */
+.content {
+	flex: 1 0 auto;
+}
+
 .container {
-    width: 90%;
-    margin: 0 auto;
-    padding: 10px;
-    overflow: none;
+	width: 90%;
+	margin: 0 auto;
+	overflow: none;
+	padding: 10px;
 }
 
 .app-header {
-    background-color: var(--primary-color);
-    box-shadow: 3px 3px 10px #888;
+	background: var(--primary-color);
+	box-shadow: 3px 3px 10px #888888;
 }
 
 .app-header .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* justify-content: space-between; */
+	justify-content: center;
+	padding: 15px 10px;
 }
 
-
 .app-header .logo {
-    width: 170px;
-    margin-bottom: 16px;
+	width: 170px;
+	margin-bottom: 1rem;
 }
 
 .app-header input[type='text'] {
-    padding: 7px;
-    width: 300px;
-    border: 0;
-    border-radius: 3px;
+	padding: 7px;
+	border: #777;
+	width: 300px;
+	border-radius: 3px;
 }
 
 .subheader {
-    background-color: var(--secondary-color);
-    color: #fff;
-    box-shadow: 3px 3px 10px #888;
-    margin: 0 auto 16px auto;
-    width: 90%;
-    font-size: 14px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	background: var(--secondary-color);
+	color: #fff;
+	box-shadow: 3px 3px 10px #888888;
+	font-size: 14px;
+	padding: 10px;
+	width: 90%;
+	margin: 0 auto 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .subheader p {
-    margin: 4px;
+	margin: 4px;
 }
 
 .subheader img {
-    width: 40px
+	width: 40px;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
 }
 
-.grid .item{
-    display: flex;
-    flex-direction: column;
-    border: 1px #ccc solid;
-    padding: 10px;
-    box-shadow: 1px 1px 2px #ccc;
+.grid .item {
+	display: flex;
+	flex-direction: column;
+	border: 1px #ccc solid;
+	padding: 10px;
+	box-shadow: 1px 1px 2px #ccc;
 }
 
 .grid .item h4 {
-    margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 .grid .item p {
-    font-size: 14px;
-    color: var(--secondary-color);
-    font-weight: bold;
-    margin-bottom: 20px;
+	font-size: 14px;
+	color: var(--secondary-color);
+	font-weight: bold;
+	margin-bottom: 20px;
 }
 
 .grid .item img {
-    width: 30px;
-    align-self: flex-end;
+	width: 30px;
+	text-align: right;
+	display: block;
+	align-self: flex-end;
 }
 
-.app-footer{
-    background: #f4f4f4;
-    color: #444;
-    padding: 10px;
-    font-size: 14px;
-    margin-top: 10px;
+.app-footer {
+	flex-shrink: 0;
+	background: #f4f4f4;
+	color: #444;
+	padding: 10px;
+	font-size: 14px;
+	margin-top: 10px;
 }
 
-.app-footer ul{
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    list-style: none;
+.app-footer ul {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
-.app-footer ul li{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.app-footer ul li {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.app-footer ul li i{
-    font-size: 22px;
+.app-footer ul li i {
+	font-size: 22px;
 }
 
-/* splash*/
-
+/* Splash */
 #splash {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--primary-color);
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 1s;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: var(--primary-color);
+	height: 100vh;
+	width: 100%;
+	z-index: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 1;
+	transition: opacity 1s;
 }
 
 #splash img {
-    width: 300px;
+	width: 300px;
 }
 
 #splash.fade {
-    opacity: 0;
+	opacity: 0;
     display: none;
 }
 
-@media(min-width: 768px) {
-    .grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
+/* Desktop */
+@media (min-width: 768px) {
+	.grid {
+		grid-template-columns: repeat(3, 1fr);
+	}
 
-    .grid .item img {
-        width:60px;
-    }
+	.grid .item img {
+		width: 60px;
+	}
 }
